# uncertainty-aware-mri-ct-synthesis

./: .gitignore  README.md  notebook00145ca15e.ipynb  package_for_colab.sh  project_summary_report.md  pyproject.toml  setup.sh
src/: __init__.py  ablation.py  dataset.py  dose_proxy.py  evaluation.py  inference.py  main.py  model.py  train.py  uncertainty.py  utils.py
