[project]
name = "mri-ct-synthesis"
version = "0.2.0"
description = "Uncertainty-Aware MRI-to-CT Synthesis — Attention Ablation and Uncertainty Method Comparison on SynthRAD2023 Brain Subset"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "nibabel>=5.1.0",
    "scikit-image>=0.21.0",
    "scipy>=1.11.1",
    "numpy>=1.24.3",
    "matplotlib>=3.7.1",
    "seaborn>=0.12.2",
    "tqdm>=4.65.0",
    "typer>=0.9.0",
    "scikit-learn>=1.3.0",
    "einops>=0.7.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
